fix  notebook scaling on mobile devices

--- a/notebooks/html/notebook.css
+++ b/notebooks/html/notebook.css
@@ -1,7 +1,24 @@
 p {
-  word-wrap: break-word; /* Wrap words that are too long */
-  overflow-wrap: break-word; /* Modern equivalent, ensures text wraps properly */
-  white-space: normal; /* Allows text to wrap normally */
+  
+}
+
+@media (max-width: 1100px) { /* Target iPad and smaller devices */
+  body {
+    padding: 0 10px; /* Add padding to avoid text hitting edges */
+  }
+
+  p {
+    word-wrap: break-word; /* Wrap words that are too long */
+    overflow-wrap: break-word; /* Modern equivalent, ensures text wraps properly */
+    white-space: normal; /* Allows text to wrap normally */
+    max-width: 100%; /* Prevents overflowing */
+    width: auto;
+    margin: 0;
+  }
+
+  .jp-InputPrompt {
+    display: none; /* Removes it from the layout and hides it */
+  }
 }
 
 
@@ -23,11 +40,12 @@ p {
 .notebook-container {
   margin-top: 60px; /* Space for the fixed header */
 }
-@media (min-width: 768px) { /* Adjust the width as needed */
+@media (min-width: 1200px) { /* Adjust the width as needed */
   .notebook-container {
     transform: scale(1.3); /* Scale the notebook content */
     transform-origin: top left;
   }
+  
 }
 
 .nav-link {
